--- a/.env
+++ b/.env
@@ -87,7 +87,7 @@ TPOT_ATTACKMAP_TEXT=ENABLED
 #  Continent/City: In Linux you can check our timezone with `readlink` /etc/localtime or
 #                  see the full list here: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 #  Examples: America/New_York, Asia/Taipei, Australia/Melbourne, Europe/Athens, Europe/Berlin
-TPOT_ATTACKMAP_TEXT_TIMEZONE=UTC
+TPOT_ATTACKMAP_TEXT_TIMEZONE=Asia/Jakarta
 
 ###################################################################################
 # Honeypots / Tools settings
@@ -146,7 +146,7 @@ TPOT_DOCKER_COMPOSE=./docker-compose.yml
 #  Depending on where you are located you may choose between DockerHub and GHCR
 #  dtagdevsec: This will use the DockerHub image registry
 #  ghcr.io/telekom-security: This will use the GitHub container registry
-TPOT_REPO=ghcr.io/telekom-security
+TPOT_REPO=ghcr.io/jineng
 
 # T-Pot Version Tag
 TPOT_VERSION=24.04.1
