--- a/installer/install/tpot.yml
+++ b/installer/install/tpot.yml
@@ -775,7 +775,7 @@
 
     - name: Clone / Update T-Pot repository (All)
       git:
-        repo: 'https://github.com/telekom-security/tpotce'
+        repo: 'https://github.com/IronT3cH/jineng'
         dest: '/home/{{ ansible_user_id }}/tpotce/'
         version: master
         clone: yes
